Truncate bike name - Truncate bike name and remove quotes from review - Fix autocomplete width - Right align rating count in suggestion list - Reduce suggestion count from 10 to 5

--- a/BikeWale.UI/css/newbikes.css
+++ b/BikeWale.UI/css/newbikes.css
@@ -178,6 +178,7 @@
 .user-review__search-form {
 	width: 570px;
 	margin: 0 auto;
+	position: relative;
 }
 
 .user-review__search-form:after {
@@ -199,9 +200,16 @@
 	float: left;
 	width: 140px;
 	font-size: 14px;
-	padding: 10px 9px 9px;
+	padding: 10px 9px 8px;
 	border-top-left-radius: 0;
 	border-bottom-left-radius: 0;
+}
+
+#erruserReviewList.ui-autocomplete {
+	width: 100%;
+	position: absolute;
+	top: 41px;
+	left: 3px;
 }
 
 /* user-review__swiper */
